Fix breadcrumbs overflow

--- a/src/ui/units/service-settings/containers/UserProfilePage/UserProfilePage.scss
+++ b/src/ui/units/service-settings/containers/UserProfilePage/UserProfilePage.scss
@@ -22,6 +22,8 @@
 
     &__breadcrumbs {
         flex-grow: 1;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 
     &__breadcrumbs-item {
